--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -18,6 +18,11 @@ jobs:
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.21.3
 
+      - if: runner.os == 'Linux'  # https://github.com/scipy/scipy/issues/16308#issuecomment-1140477372
+        run: |
+          sudo apt-get update -qq
+          sudo apt-get install --yes libopenblas-dev
+          
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
         # to supply options, put them in 'env', like:
