--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -29,7 +29,7 @@ jobs:
         env:
           CIBW_BEFORE_ALL_MACOS: bash scripts/cibw_before_all_macos.sh
           CIBW_BUILD: cp312-* cp313-*
-          CIBW_SKIP: "*-win32 *-manylinux_i686 *aarch64 *ppc64le *s390x *universal2 *arm64"
+          CIBW_SKIP: "*-win32 *i686 *aarch64 *ppc64le *s390x *universal2 *arm64"
           CIBW_TEST_REQUIRES: pytest
           CIBW_TEST_COMMAND: pytest --pyargs qmeq
 
